crates/riri-nce/tests/snapshots/cli_snapshots__npm_json_output.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&json).unwrap()"
---
{
  "computed": {
    "node": "^14.17.0 || ^16.10.0 || >=17.0.0",
    "npm": "*",
    "yarn": "*"
  },
  "changes": [
    {
      "engine": "node",
      "from": "*",
      "to": "^14.17.0 || ^16.10.0 || >=17.0.0"
    }
  ]
}
