crates/riri-nce/tests/snapshots/cli_snapshots__npm_or_ranges_node_only_verbose_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing engine constraints...
  Computed engine constraints
  node  *  →  >=20.0.0
  npm   *  →  >=9.6.4

  Run nce -v -u to upgrade package.json.
