crates/riri-nce/tests/snapshots/cli_snapshots__npm_up_to_date_verbose_stderr.snap
---
source: crates/riri-nce/tests/cli_snapshots.rs
expression: stderr
---
  Detecting lockfile...
  Detected package-lock.json
  Reading package.json...
  Read package.json
  Parsing lockfile...
  Parsed lockfile
  Computing engine constraints...
  Computed engine constraints
  warning: node 6 reached end-of-life on 2019-04-30

  All computed engines range constraints are up-to-date :)
